@@ -43,6 +43,7 @@
             nRF52: fix issue where advertising flags could get out of sync after SD restart
             Bangle.js: fix units for GPS speed (was knots, now km/h)
             Bangle.js: Add Bangle.setLCDBrightness
+            nRF52: Fix passkey pairing if setSecurity is after setServices
 
      2v04 : Allow \1..\9 escape codes in RegExp
             ESP8266: reading storage is not working for boot from user2 (fix #1507)
